package pt.ipp.isep.dei.esoft.project.domain;

public enum AnnouncementState {
    PENDING, ACCEPTED, REJECTED
}
