package pt.ipp.isep.dei.esoft.project.domain;

public enum StatusOfOrder {
    Pending,Accepted,Rejected

}
